// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hits accepts a renderHit prop 1`] = `
<div>
  <ul
    className="list"
  >
    <li
      className="item"
    >
      <div
        id={0}
      />
    </li>
    <li
      className="item"
    >
      <div
        id={1}
      />
    </li>
    <li
      className="item"
    >
      <div
        id={2}
      />
    </li>
  </ul>
  <button
    className="loadMore loadMore--disabled"
    disabled={true}
    onClick={[Function]}
  >
    Load more
  </button>
</div>
`;

exports[`Hits render a default hit 1`] = `
<div>
  <ul
    className="list"
  >
    <li
      className="item"
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #bbb",
            "marginBottom": "5px",
            "paddingBottom": "5px",
            "wordBreak": "break-all",
          }
        }
      >
        {"objectID":0}
        ...
      </div>
    </li>
    <li
      className="item"
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #bbb",
            "marginBottom": "5px",
            "paddingBottom": "5px",
            "wordBreak": "break-all",
          }
        }
      >
        {"objectID":1}
        ...
      </div>
    </li>
    <li
      className="item"
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #bbb",
            "marginBottom": "5px",
            "paddingBottom": "5px",
            "wordBreak": "break-all",
          }
        }
      >
        {"objectID":2}
        ...
      </div>
    </li>
  </ul>
  <button
    className="loadMore loadMore--disabled"
    disabled={true}
    onClick={[Function]}
  >
    Load more
  </button>
</div>
`;
